@@ -63,7 +63,7 @@ class Render extends Help {
    *   The version of kreXX.
    */
   Public Static Function version() {
-    return '1.3.2 dev';
+    return '1.3.2';
   }
 
   /**
