@@ -14,7 +14,7 @@ $EM_CONF[$_EXTKEY] = array(
   'title' => 'Include kreXX',
   'description' => 'kreXX is a php debugger with a fatal error handler. It displays debug information about objects and variables in it\'s own draggable output.',
   'category' => 'fe',
-  'version' => '1.1.2',
+  'version' => '1.3.2',
   'state' => 'stable',
   'uploadfolder' => 1,
   'clearCacheOnLoad' => 1,
