@@ -4,6 +4,7 @@
 - Bugfix /Feature: Added a small blacklist of classname/debugfunction
   combination which may cause problems during object analysis.
 - Removed the old and ugly schablon skin.
+- Added composer.json
 
 1.3.1
 - Bugfix: Local open function is working again.
